--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,10 @@
+@import "material-icons/iconfont/material-icons.css";
+@import "material-icons/iconfont/filled.css";
+@import "material-icons/iconfont/outlined.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* Tambahkan styling tambahan */
+.input-md {
+    height: 2.6rem;
+}
